<resources>
    <string name="app_name">Tactical-Material-Game</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_highscore">Highscore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Login">login</string>
    <string name="start_game">Start Game</string>
    <string name="loadout">Loadout</string>
    <string name="news">News</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="uid">Uid</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="highglobal">Highscore Global</string>
    <string name="highself">My Highscore</string>
    <string name="ship">ship</string>
    <string name="live">Live</string>
    <string name="agility">Agility</string>
    <string name="power">Power</string>
    <string name="range">Range</string>
    <string name="newsImage">News image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="FindGame">Find Game</string>
</resources>
