<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/navigation_settings" />

    <item
        android:id="@+id/navigation_highscore"
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:title="@string/navigation_highscore" />

    <item
        android:id="@+id/navigation_start_game"
        android:icon="@drawable/ic_gamepad_black_24dp"
        android:title="@string/start_game" />
    <item
        android:id="@+id/navigation_loadout"
        android:icon="@drawable/ic_developer_board_black_24dp"
        android:title="@string/loadout" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/news" />


</menu>
