<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hofbo.tactical_material_game.AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_email"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_password"
            android:layout_marginTop="10dp"
            android:text="@string/Login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_logout"
            android:layout_marginTop="10dp"
            android:text="@string/register" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="10dp"
            android:text="@string/logout" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="14dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:visibility="visible"
            app:cardElevation="11dp"
            app:contentPadding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgv_profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/profile_pic"
                    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

                <TextView
                    android:id="@+id/lbl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imgv_profile_pic"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/imgv_profile_pic"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/lbl_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/lbl_name"
                    android:layout_below="@+id/lbl_name"
                    android:layout_marginTop="15dp"
                    android:text="@string/Email" />

                <TextView
                    android:id="@+id/lbl_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/lbl_email"
                    android:layout_below="@+id/lbl_email"
                    android:layout_marginTop="15dp"
                    android:text="@string/uid" />

                <TextView
                    android:id="@+id/lbl_uid_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_uid"
                    android:layout_alignBottom="@+id/lbl_uid"
                    android:layout_alignStart="@+id/lbl_email_user"
                    tools:text="@string/uid" />

                <TextView
                    android:id="@+id/lbl_email_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_email"
                    android:layout_alignBottom="@+id/lbl_email"
                    android:layout_alignStart="@+id/lbl_name_user"
                    tools:text="@string/Email" />

                <TextView
                    android:id="@+id/lbl_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lbl_name"
                    android:layout_alignBottom="@+id/lbl_name"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/lbl_name"
                    tools:text="@string/name" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>
</FrameLayout>
